--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Lara Front</title>
   </head>
-  <body class="bg-blue-100">
+  <body class="bg-sky-100">
     <div id="app"></div>
     <script type="module" src="/src/main.js"></script>
   </body>
